--- a/newwebsite/main.css
+++ b/newwebsite/main.css
@@ -1,4 +1,12 @@
 @charset="UTF-8"
 body {
 background-color: white;
+width: 100%;
+}
+header {
+  color: blue;
+  top: 0;
+  position: absolute;
+  margin: 0 auto;
+  width: inherit;
 }
