--- a/newwebsite/main.css
+++ b/newwebsite/main.css
@@ -4,9 +4,12 @@ background-color: white;
 width: 100%;
 }
 header {
-  color: blue;
-  top: 0;
-  position: absolute;
-  margin: 0 auto;
-  width: inherit;
+  background-color: blue;
+    position: absolute;
+    top: 15px;
+    z-index: 2;
+    width: inherit;
+    height: 100%;
+    overflow: hidden;
+    margin:0 auto;
 }
