--- a/newwebsite/main.css
+++ b/newwebsite/main.css
@@ -5,11 +5,13 @@ width: 100%;
 }
 header {
   background-color: blue;
-    position: absolute;
-    top: 15px;
-    z-index: 2;
-    width: inherit;
-    height: 100%;
-    overflow: hidden;
-    margin:0 auto;
+  position: absolute;
+  top: 15px;
+  z-index: 2;
+  width: inherit;
+  height: auto;
+  overflow: hidden;
+  margin:0 auto;
+  left: 0;
+  right: 0;
 }
