--- a/newwebsite/main.css
+++ b/newwebsite/main.css
@@ -2,6 +2,7 @@
 body {
 background-color: white;
 width: 100%;
+text-align: center;
 }
 header {
   background-color: blue;
@@ -14,6 +15,7 @@ header {
   margin:0 auto;
   left: 0;
   right: 0;
+  text-align: center;
 }
 #text {
   background-color: lightBlue;
@@ -21,4 +23,5 @@ header {
   left: 0;
   right: 0;
   width: 70%;
+  text-align: center;
 }
