--- a/newwebsite/main.css
+++ b/newwebsite/main.css
@@ -1,4 +1,3 @@
-@charset="UTF-8"
 @import url(https://fonts.googleapis.com/css?family=Lobster|Londrina+Outline|Kranky);
 body {
 background-color: white;
@@ -37,7 +36,7 @@ header {
   font-family: 'Lobster', cursive;
 }
 #dev {
-  font-size: 500%
+  font-size: 500%;
   font-family: 'Londrina Outline', cursive;
 }
 #dotgithub {
