--- a/newwebsite/main.css
+++ b/newwebsite/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lobster|Londrina+Outline|Kranky);
+@import url(https://fonts.googleapis.com/css?family=Lobster|Londrina+Outline|Kranky)
 body {
 background-color: white;
 width: 100%;
