--- a/newwebsite/main.css
+++ b/newwebsite/main.css
@@ -1,8 +1,8 @@
+//Copyright Andrew Bilotti
 body {
 background-color: white;
 width: 100%;
 text-align: center;
-position: fixed;
 }
 header {
   background-color: #1af508;
