--- a/newwebsite/main.css
+++ b/newwebsite/main.css
@@ -10,7 +10,7 @@ header {
   top: 0px;
   z-index: 2;
   width: inherit;
-  height: 30%;
+  height: 100px;
   overflow: hidden;
   margin:0 auto;
   left: 0;
