--- a/newwebsite/main.css
+++ b/newwebsite/main.css
@@ -86,4 +86,16 @@ header {
   background-color: red;
   font-family: roboto, sans serif;
 }
-//End :D
+#p1 {
+  background-color: blue;
+}
+#p2 {
+  ba
+}
+#p3 {
+  background-color: pink;
+}
+//main
+#p4 {
+  background-color: aqua;
+}
